--- a/Pipfile
+++ b/Pipfile
@@ -6,6 +6,8 @@ name = "pypi"
 [packages]
 django = "*"
 python-decouple = "*"
-coverage = "*"
 
 [dev-packages]
+
+[requires]
+python_version = "3.9"
