--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -14,7 +14,7 @@ jobs:
 
     runs-on: ubuntu-lastest
 
-    step:
+    steps:
     - uses: actions/checkout@v2
     - name: Set up Python 3.8
       uses: actions/setup-python@v2
@@ -36,5 +36,5 @@ jobs:
     - name: Django Testing
       run: |
         python manage.py test
-        
+
       
