--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -21,9 +21,9 @@ jobs:
       with:
         python-version: 3.7
     - name: Install dependencies
-      run: |
-        python -m pip install --upgrade pip
-        pip install -r requirements.txt
+      uses: VaultVulp/action-pipenv@v2.0.1
+      with:
+        command: install -d # Install all dependencies, including development ones
     - name: Lint with flake8
       run: |
         pip install flake8
