--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -23,7 +23,9 @@ jobs:
     - name: Install dependencies
       uses: VaultVulp/action-pipenv@v2.0.1
       with:
-        command: install -d # Install all dependencies, including development ones
+        command: |
+          install -d # Install all dependencies, including development ones
+          pipenv shell
     - name: Lint with flake8
       run: |
         pip install flake8
