--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -25,13 +25,11 @@ jobs:
       with:
         command: |
           install -d # Install all dependencies, including development ones
-    - name: Lint with flake8
-      run: |
-        flake8
-    - name: Coverage report
-      run: |
-        coverage run manage.py test
-        coverage report
-    - name: Django Testing
-      run: |
-        python manage.py test
+    - name: Test
+      uses: VaultVulp/action-pipenv@v2.0.1
+      with:
+        command: |
+          flake8
+          coverage report
+          python manage.py test
+    
