changed from requirements to piplock

--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -29,7 +29,5 @@ jobs:
       uses: VaultVulp/action-pipenv@v2.0.1
       with:
         command: |
-          flake8
-          coverage report
-          python manage.py test
+          pipenv run test
     
