--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -20,14 +20,20 @@ jobs:
       uses: actions/setup-python@v2
       with:
         python-version: 3.7
+
     - name: Install dependencies
-      uses: VaultVulp/action-pipenv@v2.0.1
+      run: |
+        python -m pip install --upgrade pipenv wheel
+    - id: cache-pipenv
+      uses: actions/cache@v1
       with:
-        command: |
-          install -d # Install all dependencies, including development ones
-    - name: Test
-      uses: VaultVulp/action-pipenv@v2.0.1
-      with:
-        command: |
-          run test
-    
+        path: ~/.local/share/virtualenvs
+        key: ${{ runner.os }}-pipenv-${{ hashFiles('**/Pipfile.lock') }}
+
+    - name: Install dependencies
+      if: steps.cache-pipenv.outputs.cache-hit != 'true'
+      run: |
+        pipenv install --deploy --dev
+    - name: Flake8 test
+      run: flake8
+      
