--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -36,8 +36,8 @@ jobs:
         pipenv install --deploy --dev
     - name: Django Tests
       run: pipenv run python manage.py test
+    - name: Coverage report
+      run: pipenv run coverage report
     - name: Flake8 test
       run: pipenv flake8
-    - name: Coverage report
-      run: pipenv coverage report
       
