changed from requirements to piplock

--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -38,8 +38,8 @@ jobs:
       run: pipenv run python manage.py test
     - name: Coverage report
       run: | 
-        pipenv run coverage run manage.py test
+        pipenv run coverage run --omit='*/virtualenvs/*' manage.py test
         pipenv run coverage report
     - name: Flake8 test
-      run: pipenv flake8
+      run: pipenv run flake8
       
